[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/sounds/menuS.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/fonts/titleFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/sounds/menuBGS.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/backgrounds/gradient.png" type="Texture" id=7]
[ext_resource path="res://assets/backgrounds/btnBG.png" type="Texture" id=9]
[ext_resource path="res://startBtn.gd" type="Script" id=10]
[ext_resource path="res://gameOver.gd" type="Script" id=11]

[node name="gameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="startBtn" type="TextureButton" parent="."]
margin_left = 587.0
margin_top = 362.0
margin_right = 1867.0
margin_bottom = 1082.0
rect_scale = Vector2( 0.12, 0.1 )
texture_normal = ExtResource( 9 )
script = ExtResource( 10 )
scene_to_load = "res://mainScene.tscn"

[node name="quitBtn" type="TextureButton" parent="."]
margin_left = 599.0
margin_top = 453.0
margin_right = 1879.0
margin_bottom = 1173.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 9 )

[node name="RichTextLabel2" type="RichTextLabel" parent="quitBtn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -335.0
margin_top = -145.0
margin_right = 290.0
margin_bottom = 200.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 1 )
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 7 )

[node name="Title" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -402.0
margin_top = 31.0
margin_right = 402.0
margin_bottom = 232.0
custom_fonts/normal_font = ExtResource( 3 )
text = "Gmae Over"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = 22.0
margin_right = 1222.0
margin_bottom = 333.0
rect_scale = Vector2( 0.1, 0.1 )
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 1 )
text = "Restart"

[node name="btnClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="menuBgs" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
